--- a/src/os.css
+++ b/src/os.css
@@ -14,7 +14,7 @@ body {
 
   --os-sidebar-button-active-text-color: #767676;
 
-  --os-card-loading-background-color: #d2b0a1;
+  --os-card-loading-background-color: #c2c0be;
 
   /* sidebar */
   --os-sidebar-border-from: #050100;
